kubernetes/apps/adguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard   # Proxy de la UI de AdGuard Home (servicio del host ZimaBoard, fuera del clúster)
